applications/base/media/gluetun-sync-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gluetun-sync
  namespace: media
  labels:
    pihole-dns-enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.6.28"
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: https
  hostnames:
    - "gluetun-sync.local.abbottland.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gluetun-sync
          port: 4000
